# event_system

./: .gitignore  BufferFullEvent.hpp  CMakeLists.txt  Makefile  Observer.hpp  README.md  TestEvent.hpp  build.txt  callback_engine.cpp  main.cpp
include/: delegate.h  event_system.h  handler.h
include/event/: EventSystem.hpp
include/event/executors/: AsyncExecutor.hpp  SimpleExecutor.hpp
include/eventsystem/: Dispatcher.hpp  Event.hpp
src/: event_system.cpp  handler.cpp  main.cpp
test/: CMakeLists.txt  estest.cpp
tests/: Makefile  event_system_tests.cpp
